# hass-aviation-feeder

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .release-please-manifest.json  LICENSE.md  MIGRATING.md  README.md  pyproject.toml  release-please-config.json  renovate.json  repository.json
.github/scripts/: renovate_image_briefing.py  renovate_image_diff.py
.github/workflows/: addon-build.yml  addon-lint.yml  claude-code-review.yml  claude.yml  commitlint.yml  e2e.yml  image-diff.yaml  pr-title.yml  prek.yml  release-please.yml  renovate-image-review.yml  renovate-validate.yml  tests.yaml
aviation_feeder/: .dockerignore  CHANGELOG.md  DEVELOPING.md  DOCS.md  Dockerfile  README.md  assert-units.py  config.json  patch-mlat-client.py
aviation_feeder/aviation_feeder_mqtt/: __init__.py  __main__.py  app.py  app_reports.py  beast.py  emergency.py  feeders.py  metadata.py  mlat_stats.py  mqtt.py  nearby.py  netdiag.py  stats.py  supervisor.py  throughput.py  uat_stats.py  unique_daily.py  util.py
aviation_feeder/translations/: en.yaml
scripts/: addon-lint.sh
tests/e2e/: run.sh
tests/e2e/fixtures/: adsbitalia-nomlat.json  all-feeders.json  auto-location.json  decoder.json  default.json  hostile-sdr.json  (+7 more)
tests/unit/: test_app.py  test_app_reports.py  test_beast.py  test_config_consistency.py  test_emergency.py  test_feeders.py  test_metadata.py  test_mlat_stats.py  test_mqtt_discovery.py  test_nearby.py  test_netdiag.py  test_patch_mlat_client.py  test_supervisor.py  test_throughput.py  test_uat_stats.py  test_unique_daily.py
(+34 files in other folders)
